Fix bug and delete test for now